<resources>
    <string name="app_name">家教帮手</string>
    <string name="user_name">登录名</string>
    <string name="password">密码</string>
    <string name="phone_number">电话号</string>
    <string name="confirm_password">确认密码</string>
    <string name="address">地址</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="done_and_login">注册并登陆</string>
    <string name="cancel">取消</string>
    <string name="empty_username">空的用户名</string>
    <string name="empty_password">空的密码</string>
    <string name="unmatched_password">密码不一致</string>
    <string name="empty_address">空的坐标或地址</string>
    <string name="empty_subject_name">空的学科</string>
    <string name="empty_phone_number">空的电话号码</string>
    <string name="latitude">经度</string>
    <string name="real_name">真实姓名</string>
    <string name="empty_real_name">真实姓名为空</string>
    <string name="longitude">纬度</string>
    <string name="login_sucess">登陆成功</string>
    <string name="login_failure">登录失败</string>
    <string name="unkown_eror">未知错误</string>
    <string name="log_out">登出</string>
    <string name="confirm_log_out">确认退出登陆？</string>
    <string name="confirm">确认</string>
    <string name="done">确定</string>
    <string name="new_request">新的请求订单</string>
    <string name="tutor_username">家教用户名</string>
    <string name="memo">备注</string>
    <string name="send">发送</string>
    <string name="send_success">发送成功</string>
    <string name="send_failure">发送失败</string>
    <string name="pending">等待确认</string>
    <string name="rejected">已取消</string>
    <string name="approved">已确认</string>
    <string name="check_order">查看订单</string>
    <string name="order_rejected">订单被取消！</string>
    <string name="order_pending">请等待家教审批订单。</string>
    <string name="back">返回</string>
    <string name="tutor_info">家教信息</string>
    <string name="student_info">学生信息</string>
    <string name="approve_order">审核订单</string>
    <string name="approve_order_message">是否接受该订单？\n备注： </string>
    <string name="approve">接受</string>
    <string name="order_approved_toast">已接受订单</string>
    <string name="order_rejected_toast">已拒绝订单</string>
    <string name="reject">拒绝</string>
    <string name="account_type">账号类型</string>
    <string name="subject">学科</string>
    <string name="student">学生</string>
    <string name="teacher">教师</string>
    <string name="tutor_subject">家教学科</string>
    <string name="tutor_name">家教姓名</string>
    <string name="tutor_address">家教地址</string>
    <string name="tutor_phone">家教电话</string>
</resources>
